Added Johto starters.

--- a/pokemon.ini
+++ b/pokemon.ini
@@ -18,6 +18,7 @@ minimum_level = 1
 diets = Herbivore,Phototroph
 habitats = Forest,Grassland,Rainforest
 egg_groups = Monster,Plant
+family = Bulbasaur
 [Ivysaur]
 legendary = False
 base_hp = 6
@@ -38,6 +39,7 @@ minimum_level = 15
 diets = Herbivore,Phototroph
 habitats = Forest,Grassland,Rainforest
 egg_groups = Monster,Plant
+family = Bulbasaur
 [Venusaur]
 legendary = False
 base_hp = 8
@@ -57,6 +59,66 @@ minimum_level = 30
 diets = Herbivore,Phototroph
 habitats = Forest,Grassland,Rainforest
 egg_groups = Monster,Plant
+family = Bulbasaur
+[Chikorita]
+legendary = False
+base_hp = 5
+base_attack = 5
+base_defense = 7
+base_special_attack = 5
+base_special_defense = 7
+base_speed = 5
+type_1 = Grass
+basic_ability_1 = Healer
+basic_ability_2 = Overgrow
+advanced_ability_1 = Aroma Veil
+advanced_ability_2 = Leaf Guard
+high_ability = Blessed Touch
+evolution_1 = Bayleef,15
+minimum_level = 1
+diets = Phototroph,Herbivore
+habitats = Forest,Grassland
+egg_groups = Monster,Plant
+family = Chikorita
+[Bayleef]
+legendary = False
+base_hp = 6
+base_attack = 6
+base_defense = 8
+base_special_attack = 6
+base_special_defense = 8
+base_speed = 6
+type_1 = Grass
+basic_ability_1 = Healer
+basic_ability_2 = Overgrow
+advanced_ability_1 = Aroma Veil
+advanced_ability_2 = Leaf Guard
+high_ability = Blessed Touch
+evolution_1 = Meganium,30
+minimum_level = 15
+diets = Phototroph,Herbivore
+habitats = Forest,Grassland
+egg_groups = Monster,Plant
+family = Chikorita
+[Meganium]
+legendary = False
+base_hp = 8
+base_attack = 8
+base_defense = 10
+base_special_attack = 8
+base_special_defense = 10
+base_speed = 8
+type_1 = Grass
+basic_ability_1 = Healer
+basic_ability_2 = Overgrow
+advanced_ability_1 = Aroma Veil
+advanced_ability_2 = Leaf Guard
+high_ability = Blessed Touch
+minimum_level = 30
+diets = Phototroph,Herbivore
+habitats = Forest,Grassland
+egg_groups = Monster,Plant
+family = Chikorita
 [Charmander]
 legendary = False
 base_hp = 4
@@ -76,6 +138,7 @@ minimum_level = 1
 diets = Herbivore
 habitats = Cave,Mountain
 egg_groups = Monster,Dragon
+family = Charmander
 [Charmeleon]
 legendary = False
 base_hp = 6
@@ -95,6 +158,7 @@ minimum_level = 15
 diets = Carnivore
 habitats = Cave,Mountain
 egg_groups = Monster,Dragon
+family = Charmander
 [Charizard]
 legendary = False
 base_hp = 8
@@ -114,6 +178,66 @@ minimum_level = 30
 diets = Carnivore
 habitats = Cave,Mountain
 egg_groups = Monster,Dragon
+family = Charmander
+[Cyndaquil]
+legendary = False
+base_hp = 4
+base_attack = 5
+base_defense = 4
+base_special_attack = 6
+base_special_defense = 5
+base_speed = 7
+type_1 = Fire
+basic_ability_1 = Blaze
+basic_ability_2 = Flame Body
+advanced_ability_1 = Run Away
+advanced_ability_2 = Celebrate
+high_ability = Flash Fire
+evolution_1 = Quilava,15
+minimum_level = 1
+diets = Herbivore
+habitats = Cave,Mountain
+egg_groups = Field
+family = Cyndaquil
+[Quilava]
+legendary = False
+base_hp = 6
+base_attack = 6
+base_defense = 6
+base_special_attack = 8
+base_special_defense = 7
+base_speed = 8
+type_1 = Fire
+basic_ability_1 = Blaze
+basic_ability_2 = Flame Body
+advanced_ability_1 = Run Away
+advanced_ability_2 = Celebrate
+high_ability = Flash Fire
+evolution_1 = Typhlosion,30
+minimum_level = 15
+diets = Carnivore
+habitats = Cave,Mountain
+egg_groups = Field
+family = Cyndaquil
+[Typhlosion]
+legendary = False
+base_hp = 8
+base_attack = 8
+base_defense = 8
+base_special_attack = 11
+base_special_defense = 9
+base_speed = 10
+type_1 = Fire
+basic_ability_1 = Blaze
+basic_ability_2 = Flame Body
+advanced_ability_1 = Heat Mirage
+advanced_ability_2 = Celebrate
+high_ability = Flash Fire
+minimum_level = 30
+diets = Carnivore
+habitats = Cave,Mountain
+egg_groups = Field
+family = Cyndaquil
 [Squirtle]
 legendary = False
 base_hp = 4
@@ -133,6 +257,7 @@ minimum_level = 1
 diets = Herbivore
 habitats = Beach,Freshwater,Ocean
 egg_groups = Monster,Water 1
+family = Squirtle
 [Wartortle]
 legendary = False
 base_hp = 6
@@ -152,6 +277,7 @@ minimum_level = 15
 diets = Omnivore
 habitats = Beach,Freshwater,Ocean
 egg_groups = Monster,Water 1
+family = Squirtle
 [Blastoise]
 legendary = False
 base_hp = 8
@@ -170,6 +296,66 @@ minimum_level = 30
 diets = Omnivore
 habitats = Beach,Freshwater,Ocean
 egg_groups = Monster,Water 1
+family = Squirtle
+[Tododile]
+legendary = False
+base_hp = 5
+base_attack = 7
+base_defense = 6
+base_special_attack = 4
+base_special_defense = 5
+base_speed = 4
+type_1 = Water
+basic_ability_1 = Hyper Cutter
+basic_ability_2 = Torrent
+advanced_ability_1 = Frisk
+advanced_ability_2 = Sheer Force
+high_ability = Strong Jaw
+evolution_1 = Croconaw,15
+minimum_level = 1
+diets = Carnivore
+habitats = Beach,Freshwater,Marsh
+egg_groups = Monster,Water 1
+family = Tododile
+[Croconaw]
+legendary = False
+base_hp = 7
+base_attack = 8
+base_defense = 8
+base_special_attack = 6
+base_special_defense = 6
+base_speed = 6
+type_1 = Water
+basic_ability_1 = Hyper Cutter
+basic_ability_2 = Torrent
+advanced_ability_1 = Frisk
+advanced_ability_2 = Sheer Force
+high_ability = Strong Jaw
+evolution_1 = Feraligatr,30
+minimum_level = 15
+diets = Carnivore
+habitats = Beach,Freshwater,Marsh
+egg_groups = Monster,Water 1
+family = Tododile
+[Feraligatr]
+legendary = False
+base_hp = 9
+base_attack = 11
+base_defense = 10
+base_special_attack = 8
+base_special_defense = 8
+base_speed = 8
+type_1 = Water
+basic_ability_1 = Hyper Cutter
+basic_ability_2 = Torrent
+advanced_ability_1 = Frisk
+advanced_ability_2 = Sheer Force
+high_ability = Strong Jaw
+minimum_level = 30
+diets = Carnivore
+habitats = Beach,Freshwater,Marsh
+egg_groups = Monster,Water 1
+family = Tododile
 [Pichu]
 legendary = False
 base_hp = 2
@@ -189,6 +375,7 @@ minimum_level = 1
 diets = Herbivore
 habitats = Forest,Grassland,Urban
 egg_groups = Field,Fairy
+family = Pichu
 [Pikachu]
 legendary = False
 base_hp = 4
@@ -208,6 +395,7 @@ minimum_level = 1
 diets = Herbivore
 habitats = Forest,Grassland,Urban
 egg_groups = Field,Fairy
+family = Pichu
 [Raichu]
 legendary = False
 base_hp = 6
@@ -226,6 +414,7 @@ minimum_level = 20
 diets = Herbivore
 habitats = Forest
 egg_groups = Field,Fairy
+family = Pichu
 [Oddish]
 legendary = False
 base_hp = 5
@@ -246,6 +435,7 @@ minimum_level = 1
 diets = Phototroph
 habitats = Forest,Grassland,Marsh,Rainforest
 egg_groups = Plant
+family = Oddish
 [Gloom]
 legendary = False
 base_hp = 6
@@ -267,6 +457,7 @@ minimum_level = 20
 diets = Phototroph
 habitats = Forest,Grassland,Marsh,Rainforest
 egg_groups = Plant
+family = Oddish
 [Vileplume]
 legendary = False
 base_hp = 8
@@ -286,6 +477,7 @@ minimum_level = 30
 diets = Phototroph
 habitats = Forest,Grassland,Marsh,Rainforest
 egg_groups = Plant
+family = Oddish
 [Bellossom]
 legendary = False
 base_hp = 8
@@ -304,7 +496,8 @@ minimum_level = 30
 diets = Phototroph
 habitats = Marsh,Rainforest
 egg_groups = Plant
-; [Template]
+family = Oddish
+; [DEFAULT]
 ; legendary = False
 ; base_hp = 
 ; base_attack = 
@@ -324,3 +517,4 @@ egg_groups = Plant
 ; diets = 
 ; habitats = 
 ; egg_groups = 
+; family = 
