Changed how types were stored and checked for. Changed how abilities are stored, so they can be checked for in a future version.

--- a/pokemon.ini
+++ b/pokemon.ini
@@ -6,19 +6,16 @@ base_defense = 5
 base_special_attack = 7
 base_special_defense = 7
 base_speed = 5
-type_1 = Grass
-type_2 = Poison
-basic_ability_1 = Chlorophyll
-basic_ability_2 = Overgrow
-advanced_ability_1 = Confidence
-advanced_ability_2 = Discipline
+types = Grass,Poison
+basic_abilities = Chlorophyll,Overgrow
+advanced_abilities = Confidence,Discipline
 high_ability = Empower
-evolution_1 = Ivysaur,15
+evolutions = Ivysaur,15
 minimum_level = 1
 diets = Herbivore,Phototroph
 habitats = Forest,Grassland,Rainforest
 egg_groups = Monster,Plant
-family = Bulbasaur
+family = Bulbasaur,Ivysaur,Venusaur
 [Ivysaur]
 legendary = False
 base_hp = 6
@@ -27,19 +24,16 @@ base_defense = 6
 base_special_attack = 8
 base_special_defense = 8
 base_speed = 6
-type_1 = Grass
-type_2 = Poison
-basic_ability_1 = Chlorophyll
-basic_ability_2 = Overgrow
-advanced_ability_1 = Confidence
-advanced_ability_2 = Discipline
+types = Grass,Poison
+basic_abilities = Chlorophyll,Overgrow
+advanced_abilities = Confidence,Discipline
 high_ability = Empower
-evolution_1 = Venusaur,30
+evolutions = Venusaur,30
 minimum_level = 15
 diets = Herbivore,Phototroph
 habitats = Forest,Grassland,Rainforest
 egg_groups = Monster,Plant
-family = Bulbasaur
+family = Bulbasaur,Ivysaur,Venusaur
 [Venusaur]
 legendary = False
 base_hp = 8
@@ -48,18 +42,15 @@ base_defense = 8
 base_special_attack = 10
 base_special_defense = 10
 base_speed = 8
-type_1 = Grass
-type_2 = Poison
-basic_ability_1 = Chlorophyll
-basic_ability_2 = Overgrow
-advanced_ability_1 = Confidence
-advanced_ability_2 = Discipline
+types = Grass,Poison
+basic_abilities = Chlorophyll,Overgrow
+advanced_abilities = Confidence,Discipline
 high_ability = Empower
 minimum_level = 30
 diets = Herbivore,Phototroph
 habitats = Forest,Grassland,Rainforest
 egg_groups = Monster,Plant
-family = Bulbasaur
+family = Bulbasaur,Ivysaur,Venusaur
 [Chikorita]
 legendary = False
 base_hp = 5
@@ -68,18 +59,16 @@ base_defense = 7
 base_special_attack = 5
 base_special_defense = 7
 base_speed = 5
-type_1 = Grass
-basic_ability_1 = Healer
-basic_ability_2 = Overgrow
-advanced_ability_1 = Aroma Veil
-advanced_ability_2 = Leaf Guard
+types = Grass
+basic_abilities = Healer,Overgrow
+advanced_abilities = Aroma Veil,Leaf Guard
 high_ability = Blessed Touch
-evolution_1 = Bayleef,15
+evolutions = Bayleef,15
 minimum_level = 1
 diets = Phototroph,Herbivore
 habitats = Forest,Grassland
 egg_groups = Monster,Plant
-family = Chikorita
+family = Chikorita,Bayleef,Meganium
 [Bayleef]
 legendary = False
 base_hp = 6
@@ -88,18 +77,16 @@ base_defense = 8
 base_special_attack = 6
 base_special_defense = 8
 base_speed = 6
-type_1 = Grass
-basic_ability_1 = Healer
-basic_ability_2 = Overgrow
-advanced_ability_1 = Aroma Veil
-advanced_ability_2 = Leaf Guard
+types = Grass
+basic_abilities = Healer,Overgrow
+advanced_abilities = Aroma Veil,Leaf Guard
 high_ability = Blessed Touch
-evolution_1 = Meganium,30
+evolutions = Meganium,30
 minimum_level = 15
 diets = Phototroph,Herbivore
 habitats = Forest,Grassland
 egg_groups = Monster,Plant
-family = Chikorita
+family = Chikorita,Bayleef,Meganium
 [Meganium]
 legendary = False
 base_hp = 8
@@ -108,17 +95,15 @@ base_defense = 10
 base_special_attack = 8
 base_special_defense = 10
 base_speed = 8
-type_1 = Grass
-basic_ability_1 = Healer
-basic_ability_2 = Overgrow
-advanced_ability_1 = Aroma Veil
-advanced_ability_2 = Leaf Guard
+types = Grass
+basic_abilities = Healer,Overgrow
+advanced_abilities = Aroma Veil,Leaf Guard
 high_ability = Blessed Touch
 minimum_level = 30
 diets = Phototroph,Herbivore
 habitats = Forest,Grassland
 egg_groups = Monster,Plant
-family = Chikorita
+family = Chikorita,Bayleef,Meganium
 [Charmander]
 legendary = False
 base_hp = 4
@@ -127,18 +112,16 @@ base_defense = 4
 base_special_attack = 6
 base_special_defense = 5
 base_speed = 7
-type_1 = Fire
-basic_ability_1 = Blaze
-basic_ability_2 = Rattled
-advanced_ability_1 = Solar Power
-advanced_ability_2 = Courage
+types = Fire
+basic_abilities = Blaze,Rattled
+advanced_abilities = Solar Power,Courage
 high_ability = Dodge
-evolution_1 = Charmleon,15
+evolutions = Charmleon,15
 minimum_level = 1
 diets = Herbivore
 habitats = Cave,Mountain
 egg_groups = Monster,Dragon
-family = Charmander
+family = Charmander,Charmeleon,Charizard
 [Charmeleon]
 legendary = False
 base_hp = 6
@@ -147,18 +130,16 @@ base_defense = 6
 base_special_attack = 8
 base_special_defense = 7
 base_speed = 8
-type_1 = Fire
-basic_ability_1 = Blaze
-basic_ability_2 = Intimidate
-advanced_ability_1 = Solar Power
-advanced_ability_2 = Prime Fury
+types = Fire
+basic_abilities = Blaze,Intimidate
+advanced_abilities = Solar Power,Prime Fury
 high_ability = White Flame
-evolution_1 = Charizard,30
+evolutions = Charizard,30
 minimum_level = 15
 diets = Carnivore
 habitats = Cave,Mountain
 egg_groups = Monster,Dragon
-family = Charmander
+family = Charmander,Charmeleon,Charizard
 [Charizard]
 legendary = False
 base_hp = 8
@@ -167,18 +148,15 @@ base_defense = 8
 base_special_attack = 11
 base_special_defense = 9
 base_speed = 10
-type_1 = Fire
-type_2 = Flying
-basic_ability_1 = Blaze
-basic_ability_2 = Intimidate
-advanced_ability_1 = Solar Power
-advanced_ability_2 = Prime Fury
+types = Fire,Flying
+basic_abilities = Blaze,Intimidate
+advanced_abilities = Solar Power,Prime Fury
 high_ability = White Flame
 minimum_level = 30
 diets = Carnivore
 habitats = Cave,Mountain
 egg_groups = Monster,Dragon
-family = Charmander
+family = Charmander,Charmeleon,Charizard
 [Cyndaquil]
 legendary = False
 base_hp = 4
@@ -187,18 +165,16 @@ base_defense = 4
 base_special_attack = 6
 base_special_defense = 5
 base_speed = 7
-type_1 = Fire
-basic_ability_1 = Blaze
-basic_ability_2 = Flame Body
-advanced_ability_1 = Run Away
-advanced_ability_2 = Celebrate
+types = Fire
+basic_abilities = Blaze,Flame Body
+advanced_abilities = Run Away,Celebrate
 high_ability = Flash Fire
-evolution_1 = Quilava,15
+evolutions = Quilava,15
 minimum_level = 1
 diets = Herbivore
 habitats = Cave,Mountain
 egg_groups = Field
-family = Cyndaquil
+family = Cyndaquil,Quilava,Typhlosion
 [Quilava]
 legendary = False
 base_hp = 6
@@ -207,18 +183,16 @@ base_defense = 6
 base_special_attack = 8
 base_special_defense = 7
 base_speed = 8
-type_1 = Fire
-basic_ability_1 = Blaze
-basic_ability_2 = Flame Body
-advanced_ability_1 = Run Away
-advanced_ability_2 = Celebrate
+types = Fire
+basic_abilities = Blaze,Flame Body
+advanced_abilities = Run Away,Celebrate
 high_ability = Flash Fire
-evolution_1 = Typhlosion,30
+evolutions = Typhlosion,30
 minimum_level = 15
 diets = Carnivore
 habitats = Cave,Mountain
 egg_groups = Field
-family = Cyndaquil
+family = Cyndaquil,Quilava,Typhlosion
 [Typhlosion]
 legendary = False
 base_hp = 8
@@ -227,17 +201,15 @@ base_defense = 8
 base_special_attack = 11
 base_special_defense = 9
 base_speed = 10
-type_1 = Fire
-basic_ability_1 = Blaze
-basic_ability_2 = Flame Body
-advanced_ability_1 = Heat Mirage
-advanced_ability_2 = Celebrate
+types = Fire
+basic_abilities = Blaze,Flame Body
+advanced_abilities = Heat Mirage,Celebrate
 high_ability = Flash Fire
 minimum_level = 30
 diets = Carnivore
 habitats = Cave,Mountain
 egg_groups = Field
-family = Cyndaquil
+family = Cyndaquil,Quilava,Typhlosion
 [Squirtle]
 legendary = False
 base_hp = 4
@@ -246,18 +218,16 @@ base_defense = 7
 base_special_attack = 5
 base_special_defense = 6
 base_speed = 4
-type_1 = Water
-basic_ability_1 = Rain Dish
-basic_ability_2 = Torrent
-advanced_ability_1 = Shell Armor
-advanced_ability_2 = Shell Shield
+types = Water
+basic_abilities = Rain Dish,Torrent
+advanced_abilities = Shell Armor,Shell Shield
 high_ability = Overcoat
-evolution_1 = Wartortle,15
+evolutions = Wartortle,15
 minimum_level = 1
 diets = Herbivore
 habitats = Beach,Freshwater,Ocean
 egg_groups = Monster,Water 1
-family = Squirtle
+family = Squirtle,Wartortle,Blastoise
 [Wartortle]
 legendary = False
 base_hp = 6
@@ -266,18 +236,16 @@ base_defense = 8
 base_special_attack = 7
 base_special_defense = 8
 base_speed = 6
-type_1 = Water
-basic_ability_1 = Rain Dish
-basic_ability_2 = Torrent
-advanced_ability_1 = Shell Armor
-advanced_ability_2 = Shell Shield
+types = Water
+basic_abilities = Rain Dish,Torrent
+advanced_abilities = Shell Armor,Shell Shield
 high_ability = Overcoat
-evolution_1 = Blastoise,30
+evolutions = Blastoise,30
 minimum_level = 15
 diets = Omnivore
 habitats = Beach,Freshwater,Ocean
 egg_groups = Monster,Water 1
-family = Squirtle
+family = Squirtle,Wartortle,Blastoise
 [Blastoise]
 legendary = False
 base_hp = 8
@@ -286,17 +254,15 @@ base_defense = 10
 base_special_attack = 9
 base_special_defense = 11
 base_speed = 8
-type_1 = Water
-basic_ability_1 = Rain Dish
-basic_ability_2 = Torrent
-advanced_ability_1 = Shell Armor
-advanced_ability_2 = Shell Shield
+types = Water
+basic_abilities = Rain Dish,Torrent
+advanced_abilities = Shell Armor,Shell Shield
 high_ability = Overcoat
 minimum_level = 30
 diets = Omnivore
 habitats = Beach,Freshwater,Ocean
 egg_groups = Monster,Water 1
-family = Squirtle
+family = Squirtle,Wartortle,Blastoise
 [Tododile]
 legendary = False
 base_hp = 5
@@ -305,18 +271,16 @@ base_defense = 6
 base_special_attack = 4
 base_special_defense = 5
 base_speed = 4
-type_1 = Water
-basic_ability_1 = Hyper Cutter
-basic_ability_2 = Torrent
-advanced_ability_1 = Frisk
-advanced_ability_2 = Sheer Force
+types = Water
+basic_abilities = Hyper Cutter,Torrent
+advanced_abilities = Frisk,Sheer Force
 high_ability = Strong Jaw
-evolution_1 = Croconaw,15
+evolutions = Croconaw,15
 minimum_level = 1
 diets = Carnivore
 habitats = Beach,Freshwater,Marsh
 egg_groups = Monster,Water 1
-family = Tododile
+family = Tododile,Croconaw,Feraligatr
 [Croconaw]
 legendary = False
 base_hp = 7
@@ -325,18 +289,16 @@ base_defense = 8
 base_special_attack = 6
 base_special_defense = 6
 base_speed = 6
-type_1 = Water
-basic_ability_1 = Hyper Cutter
-basic_ability_2 = Torrent
-advanced_ability_1 = Frisk
-advanced_ability_2 = Sheer Force
+types = Water
+basic_abilities = Hyper Cutter,Torrent
+advanced_abilities = Frisk,Sheer Force
 high_ability = Strong Jaw
-evolution_1 = Feraligatr,30
+evolutions = Feraligatr,30
 minimum_level = 15
 diets = Carnivore
 habitats = Beach,Freshwater,Marsh
 egg_groups = Monster,Water 1
-family = Tododile
+family = Tododile,Croconaw,Feraligatr
 [Feraligatr]
 legendary = False
 base_hp = 9
@@ -345,17 +307,15 @@ base_defense = 10
 base_special_attack = 8
 base_special_defense = 8
 base_speed = 8
-type_1 = Water
-basic_ability_1 = Hyper Cutter
-basic_ability_2 = Torrent
-advanced_ability_1 = Frisk
-advanced_ability_2 = Sheer Force
+types = Water
+basic_abilities = Hyper Cutter,Torrent
+advanced_abilities = Frisk,Sheer Force
 high_ability = Strong Jaw
 minimum_level = 30
 diets = Carnivore
 habitats = Beach,Freshwater,Marsh
 egg_groups = Monster,Water 1
-family = Tododile
+family = Tododile,Croconaw,Feraligatr
 [Pichu]
 legendary = False
 base_hp = 2
@@ -364,18 +324,16 @@ base_defense = 2
 base_special_attack = 4
 base_special_defense = 4
 base_speed = 6
-type_1 = Electric
-basic_ability_1 = Static
-basic_ability_2 = Cute Charm
-advanced_ability_1 = Lightning Rod
-advanced_ability_2 = Sprint
+types = Electric
+basic_abilities = Static,Cute Charm
+advanced_abilities = Lightning Rod,Sprint
 high_ability = Sequence
-evolution_1 = Pikachu,10
+evolutions = Pikachu,10
 minimum_level = 1
 diets = Herbivore
 habitats = Forest,Grassland,Urban
 egg_groups = Field,Fairy
-family = Pichu
+family = Pichu,Pikachu,Raichu
 [Pikachu]
 legendary = False
 base_hp = 4
@@ -384,18 +342,16 @@ base_defense = 4
 base_special_attack = 5
 base_special_defense = 5
 base_speed = 9
-type_1 = Electric
-basic_ability_1 = Static
-basic_ability_2 = Cute Charm
-advanced_ability_1 = Lightning Rod
-advanced_ability_2 = Sprint
+types = Electric
+basic_abilities = Static,Cute Charm
+advanced_abilities = Lightning Rod,Sprint
 high_ability = Sequence
-evolution_1 = Raichu,20,Thunder Stone
+evolutions = Raichu,20,Thunder Stone
 minimum_level = 1
 diets = Herbivore
 habitats = Forest,Grassland,Urban
 egg_groups = Field,Fairy
-family = Pichu
+family = Pichu,Pikachu,Raichu
 [Raichu]
 legendary = False
 base_hp = 6
@@ -404,17 +360,15 @@ base_defense = 6
 base_special_attack = 9
 base_special_defense = 8
 base_speed = 11
-type_1 = Electric
-basic_ability_1 = Static
-basic_ability_2 = Motor Drive
-advanced_ability_1 = Lightning Rod
-advanced_ability_2 = Sprint
+types = Electric
+basic_abilities = Static,Motor Drive
+advanced_abilities = Lightning Rod,Sprint
 high_ability = Sequence
 minimum_level = 20
 diets = Herbivore
 habitats = Forest
 egg_groups = Field,Fairy
-family = Pichu
+family = Pichu,Pikachu,Raichu
 [Oddish]
 legendary = False
 base_hp = 5
@@ -423,19 +377,16 @@ base_defense = 6
 base_special_attack = 8
 base_special_defense = 7
 base_speed = 3
-type_1 = Grass
-type_2 = Poison
-basic_ability_1 = Chlorophyll
-basic_ability_2 = Run Away
-advanced_ability_1 = Adaptability
-advanced_ability_2 = Oblivious
+types = Grass,Poison
+basic_abilities = Chlorophyll,Run Away
+advanced_abilities = Adaptability,Oblivious
 high_ability = Life Force
-evolution_1 = Gloom,20
+evolutions = Gloom,20
 minimum_level = 1
 diets = Phototroph
 habitats = Forest,Grassland,Marsh,Rainforest
 egg_groups = Plant
-family = Oddish
+family = Oddish,Gloom,Vileplume,Bellossom
 [Gloom]
 legendary = False
 base_hp = 6
@@ -444,20 +395,16 @@ base_defense = 7
 base_special_attack = 9
 base_special_defense = 8
 base_speed = 4
-type_1 = Grass
-type_2 = Poison
-basic_ability_1 = Effect Spore
-basic_ability_2 = Run Away
-advanced_ability_1 = Stench
-advanced_ability_2 = Oblivious
+types = Grass,Poison
+basic_abilities = Effect Spore,Run Away
+advanced_abilities = Stench,Oblivious
 high_ability = Life Force
-evolution_1 = Vileplume,30,Leaf Stone
-evolution_2 = Bellossom,30,Sun Stone
+evolutions = Vileplume,30,Leaf Stone;Bellossom,30,Sun Stone
 minimum_level = 20
 diets = Phototroph
 habitats = Forest,Grassland,Marsh,Rainforest
 egg_groups = Plant
-family = Oddish
+family = Oddish,Gloom,Vileplume,Bellossom
 [Vileplume]
 legendary = False
 base_hp = 8
@@ -466,18 +413,15 @@ base_defense = 9
 base_special_attack = 11
 base_special_defense = 9
 base_speed = 5
-type_1 = Grass
-type_2 = Poison
-basic_ability_1 = Effect Spore
-basic_ability_2 = Hay Fever
-advanced_ability_1 = Stench
-advanced_ability_2 = Dust Cloud
+types = Grass,Poison
+basic_abilities = Effect Spore,Hay Fever
+advanced_abilities = Stench,Dust Cloud
 high_ability = Life Force
 minimum_level = 30
 diets = Phototroph
 habitats = Forest,Grassland,Marsh,Rainforest
 egg_groups = Plant
-family = Oddish
+family = Oddish,Gloom,Vileplume,Bellossom
 [Bellossom]
 legendary = False
 base_hp = 8
@@ -486,17 +430,152 @@ base_defense = 10
 base_special_attack = 9
 base_special_defense = 10
 base_speed = 5
-type_1 = Grass
-basic_ability_1 = Sol Veil
-basic_ability_2 = Healer
-advanced_ability_1 = Chlorophyll
-advanced_ability_2 = Natural Cure
+types = Grass
+basic_abilities = Sol Veil,Healer
+advanced_abilities = Chlorophyll,Natural Cure
 high_ability = Life Force
 minimum_level = 30
 diets = Phototroph
 habitats = Marsh,Rainforest
 egg_groups = Plant
-family = Oddish
+family = Oddish,Gloom,Vileplume,Bellossom
+[Eevee]
+legendary = False
+base_hp = 6
+base_attack = 6
+base_defense = 5
+base_special_attack = 5
+base_special_defense = 7
+base_speed = 6
+types = Normal
+basic_abilities = Run Away,Sprint
+advanced_abilities = Last Chance,Anticipation
+high_ability = Celebrate
+evolutions = Vaporeon,1,Water Stone;Jolteon,1,Thunderstone;Flareon,1,Fire Stone;Espeon,1,Dawn Stone;Umbreon,1,Dusk Stone;Leafeon,1,Leaf Stone;Glaceon,1,Shiny Stone
+minimum_level = 1
+diets = Herbivore
+habitats = Forest,Grassland,Urban
+egg_groups = Field
+family = Eevee,Vaporeon,Jolteon,Flareon,Espeon,Umbreon,Leafeon,Glaceon
+[Vaporeon]
+legendary = False
+base_hp = 13
+base_attack = 7
+base_defense = 6
+base_special_attack = 11
+base_special_defense = 10
+base_speed = 7
+types = Water
+basic_abilities = Water Absorb,Swift Swim
+advanced_abilities = Type Arua (Water),Hydration
+high_ability = Wash Away
+minimum_level = 1
+diets = Omnivore
+habitats = Forest,Freshwater
+egg_groups = Field
+family = Eevee,Vaporeon,Jolteon,Flareon,Espeon,Umbreon,Leafeon,Glaceon
+[Jolteon]
+legendary = False
+base_hp = 7
+base_attack = 7
+base_defense = 6
+base_special_attack = 11
+base_special_defense = 10
+base_speed = 13
+types = Electric
+basic_abilities = Volt Absorb,Sprint
+advanced_abilities = Type Aura (Electric),Quick Feet
+high_ability = Vanguard
+minimum_level = 1
+diets = Omnivore
+habitats = Forest,Urban
+egg_groups = Field
+family = Eevee,Vaporeon,Jolteon,Flareon,Espeon,Umbreon,Leafeon,Glaceon
+[Flareon]
+legendary = False
+base_hp = 7
+base_attack = 13
+base_defense = 6
+base_special_attack = 10
+base_special_defense = 11
+base_speed = 7
+types = Fire
+basic_abilities = Flash Fire,Flame Body
+advanced_abilities = Type Aura (Fire),Defiant
+high_ability = Guts
+minimum_level = 1
+diets = Omnivore
+habitats = Cave,Mountain,Urban
+egg_groups = Field
+family = Eevee,Vaporeon,Jolteon,Flareon,Espeon,Umbreon,Leafeon,Glaceon
+[Espeon]
+legendary = False
+base_hp = 7
+base_attack = 7
+base_defense = 6
+base_special_attack = 13
+base_special_defense = 10
+base_speed = 11
+types = Psychic
+basic_abilities = Synchronise,Trace
+advanced_abilities = Type Aura (Psychic),Perception
+high_ability = Magic Bounce
+minimum_level = 1
+diets = Omnivore
+habitats = Forest,Grassland,Urban
+egg_groups = Field
+family = Eevee,Vaporeon,Jolteon,Flareon,Espeon,Umbreon,Leafeon,Glaceon
+[Umbreon]
+legendary = False
+base_hp = 10
+base_attack = 7
+base_defense = 11
+base_special_attack = 6
+base_special_defense = 13
+base_speed = 7
+types = Dark
+basic_abilities = Synchronise,Pressure
+advanced_abilities = Type Aura (Dark),Inner Focus
+high_ability = Ambush
+minimum_level = 1
+diets = Omnivore
+habitats = Cave,Forest,Urban
+egg_groups = Field
+family = Eevee,Vaporeon,Jolteon,Flareon,Espeon,Umbreon,Leafeon,Glaceon
+[Leafeon]
+legendary = False
+base_hp = 7
+base_attack = 11
+base_defense = 13
+base_special_attack = 6
+base_special_defense = 7
+base_speed = 10
+types = Grass
+basic_abilities = Leaf Guard,Grass Pelt
+advanced_abilities = Type Aura (Grass),Chlorophyll
+high_ability = Life Force
+minimum_level = 1
+diets = Herbivore,Phototroph
+habitats = Forest,Grassland,Rainforest
+egg_groups = Field
+family = Eevee,Vaporeon,Jolteon,Flareon,Espeon,Umbreon,Leafeon,Glaceon
+[Glaceon]
+legendary = False
+base_hp = 7
+base_attack = 6
+base_defense = 11
+base_special_attack = 13
+base_special_defense = 10
+base_speed = 7
+types = Ice
+basic_abilities = Snow Cloak,Winter's Kiss
+advanced_abilities = Type Aura (Ice),Ice Body
+high_ability = Frostbite
+minimum_level = 1
+diets = Omnivore
+habitats = Taiga,Tundra
+egg_groups = Field
+family = Eevee,Vaporeon,Jolteon,Flareon,Espeon,Umbreon,Leafeon,Glaceon
 ; [DEFAULT]
 ; legendary = False
 ; base_hp = 
@@ -505,14 +584,14 @@ family = Oddish
 ; base_special_attack = 
 ; base_special_defense = 
 ; base_speed = 
-; type_1 = 
+; types = 
 ; type_2 = 
-; basic_ability_1 = 
+; basic_abilities = 
 ; basic_ability_2 = 
-; advanced_ability_1 = 
+; advanced_abilities = 
 ; advanced_ability_2 = 
 ; high_ability = 
-; evolution_1 = 
+; evolutions = 
 ; minimum_level = 
 ; diets = 
 ; habitats = 
