--- a/pokemon.ini
+++ b/pokemon.ini
@@ -1,3 +1,5 @@
+; Pokedex isn't consistent on spelling of Naturewalk terrains, both within the Capabilities section and compared to the Habitat section
+; Naturewalk:Grassland
 [Bulbasaur]
 legendary = False
 base_hp = 5
@@ -16,6 +18,7 @@ diets = Herbivore,Phototroph
 habitats = Forest,Grassland,Rainforest
 egg_groups = Monster,Plant
 family = Bulbasaur,Ivysaur,Venusaur
+capabilities = Overland:5,Swim:3,High Jump:0,Long Jump:2,Power:2,Naturewalk:Grassland,Naturewalk:Forest,Underdog
 [Ivysaur]
 legendary = False
 base_hp = 6
@@ -34,6 +37,7 @@ diets = Herbivore,Phototroph
 habitats = Forest,Grassland,Rainforest
 egg_groups = Monster,Plant
 family = Bulbasaur,Ivysaur,Venusaur
+capabilities = Overland:6,Swim:3,High Jump:1,Long Jump:1,Power:3,Naturewalk:Grassland,Naturewalk:Forest,Underdog
 [Venusaur]
 legendary = False
 base_hp = 8
@@ -51,6 +55,7 @@ diets = Herbivore,Phototroph
 habitats = Forest,Grassland,Rainforest
 egg_groups = Monster,Plant
 family = Bulbasaur,Ivysaur,Venusaur
+capabilities = Overland:6,Swim:4,High Jump:2,Long Jump:2,Power:8,Naturewalk:Grassland,Naturewalk:Forest,Alluring
 [Chikorita]
 legendary = False
 base_hp = 5
@@ -69,6 +74,7 @@ diets = Phototroph,Herbivore
 habitats = Forest,Grassland
 egg_groups = Monster,Plant
 family = Chikorita,Bayleef,Meganium
+capabilities = Overland:5,Swim:3,High Jump:1,Long Jump:1,Power:2,Naturewalk:Grassland,Naturewalk:Forest,Underdog
 [Bayleef]
 legendary = False
 base_hp = 6
@@ -87,6 +93,7 @@ diets = Phototroph,Herbivore
 habitats = Forest,Grassland
 egg_groups = Monster,Plant
 family = Chikorita,Bayleef,Meganium
+capabilities = Overland:7,Swim:4,High Jump:2,Long Jump:2,Power:3,Naturewalk:Grassland,Naturewalk:Forest,Underdog
 [Meganium]
 legendary = False
 base_hp = 8
@@ -104,6 +111,7 @@ diets = Phototroph,Herbivore
 habitats = Forest,Grassland
 egg_groups = Monster,Plant
 family = Chikorita,Bayleef,Meganium
+capabilities = Overland:8,Swim:4,High Jump:2,Long Jump:2,Power:4,Naturewalk:Grassland,Naturewalk:Forest
 [Charmander]
 legendary = False
 base_hp = 4
@@ -122,6 +130,7 @@ diets = Herbivore
 habitats = Cave,Mountain
 egg_groups = Monster,Dragon
 family = Charmander,Charmeleon,Charizard
+capabilities = Overland:5,Swim:3,High Jump:1,Long Jump:1,Power:2,Firestarter,Glow,Naturewalk:Mountain,Underdog
 [Charmeleon]
 legendary = False
 base_hp = 6
@@ -140,6 +149,7 @@ diets = Carnivore
 habitats = Cave,Mountain
 egg_groups = Monster,Dragon
 family = Charmander,Charmeleon,Charizard
+capabilities = Overland:6,Swim:4,High Jump:1,Long Jump:1,Power:4,Firestarter,Glow,Naturewalk:Mountain,Underdog
 [Charizard]
 legendary = False
 base_hp = 8
@@ -157,6 +167,7 @@ diets = Carnivore
 habitats = Cave,Mountain
 egg_groups = Monster,Dragon
 family = Charmander,Charmeleon,Charizard
+capabilities = Overland:6,Swim:5,Sky:8,High Jump:2,Long Jump:3,Power:8,Firestarter,Glow,Heater,Naturewalk:Mountain,Mountable:1
 [Cyndaquil]
 legendary = False
 base_hp = 4
@@ -175,6 +186,7 @@ diets = Herbivore
 habitats = Cave,Mountain
 egg_groups = Field
 family = Cyndaquil,Quilava,Typhlosion
+capabilities = Overland:5,Swim:3,High Jump:1,Long Jump:1,Burrow:2,Power:2,Firestarter,Heater,Glow,Naturewalk:Grassland,Underdog
 [Quilava]
 legendary = False
 base_hp = 6
@@ -193,6 +205,7 @@ diets = Carnivore
 habitats = Cave,Mountain
 egg_groups = Field
 family = Cyndaquil,Quilava,Typhlosion
+capabilities = Overland:7,Swim:4,High Jump:2,Long Jump:2,Burrow:3,Power:3,Firestarter,Heater,Glow,Naturewalk:Grassland,Underdog
 [Typhlosion]
 legendary = False
 base_hp = 8
@@ -210,6 +223,7 @@ diets = Carnivore
 habitats = Cave,Mountain
 egg_groups = Field
 family = Cyndaquil,Quilava,Typhlosion
+capabilities = Overland:9,Swim:5,High Jump:2,Long Jump:2,Power:6,Firestarter,Heater,Glow,Naturewalk:Grassland
 [Squirtle]
 legendary = False
 base_hp = 4
@@ -228,6 +242,7 @@ diets = Herbivore
 habitats = Beach,Freshwater,Ocean
 egg_groups = Monster,Water 1
 family = Squirtle,Wartortle,Blastoise
+capabilities = Overland:6,Swim:6,High Jump:1,Long Jump:1,Power:2,Fountain,Naturewalk:Wetland,Underdog
 [Wartortle]
 legendary = False
 base_hp = 6
@@ -246,6 +261,7 @@ diets = Omnivore
 habitats = Beach,Freshwater,Ocean
 egg_groups = Monster,Water 1
 family = Squirtle,Wartortle,Blastoise
+capabilities = Overland:6,Swim:6,High Jump:1,Long Jump:1,Power:4,Fountain,Naturewalk:Wetlands,Underdog
 [Blastoise]
 legendary = False
 base_hp = 8
@@ -263,6 +279,7 @@ diets = Omnivore
 habitats = Beach,Freshwater,Ocean
 egg_groups = Monster,Water 1
 family = Squirtle,Wartortle,Blastoise
+capabilities = Overland:6,Swim:9,High Jump:1,Long Jump:1,Power:9,Fountain,Naturewalk:Grassland,Mountable:1
 [Tododile]
 legendary = False
 base_hp = 5
@@ -281,6 +298,7 @@ diets = Carnivore
 habitats = Beach,Freshwater,Marsh
 egg_groups = Monster,Water 1
 family = Tododile,Croconaw,Feraligatr
+capabilities = Overland:6,Swim:6,High Jump:1,Long Jump:2,Power:2,Fountain,Naturewalk:Wetlands,Underdog
 [Croconaw]
 legendary = False
 base_hp = 7
@@ -299,6 +317,7 @@ diets = Carnivore
 habitats = Beach,Freshwater,Marsh
 egg_groups = Monster,Water 1
 family = Tododile,Croconaw,Feraligatr
+capabilities = Overland:7,Swim:7,High Jump:1,Long Jump:2,Power:5,Fountain,Naturewalk:Wetlands,Underdog
 [Feraligatr]
 legendary = False
 base_hp = 9
@@ -316,6 +335,7 @@ diets = Carnivore
 habitats = Beach,Freshwater,Marsh
 egg_groups = Monster,Water 1
 family = Tododile,Croconaw,Feraligatr
+capabilities = Overland:7,Swim:8,High Jump:2,Long Jump:2,Power:8,Fountain,Naturewalk:Wetlands
 [Pichu]
 legendary = False
 base_hp = 2
@@ -334,6 +354,7 @@ diets = Herbivore
 habitats = Forest,Grassland,Urban
 egg_groups = Field,Fairy
 family = Pichu,Pikachu,Raichu
+capabilities = Overland:3,Swim:1,High Jump:1,Long Jump:2,Power:1,Zapper,Naturewalk:Forest,Naturewalk:Urban,Underdog
 [Pikachu]
 legendary = False
 base_hp = 4
@@ -352,6 +373,7 @@ diets = Herbivore
 habitats = Forest,Grassland,Urban
 egg_groups = Field,Fairy
 family = Pichu,Pikachu,Raichu
+capabilities = Overland:7,Swim:2,High Jump:2,Long Jump:2,Power:2,Zapper,Naturewalk:Forest,Naturewalk:Urban,Underdog
 [Raichu]
 legendary = False
 base_hp = 6
@@ -369,6 +391,7 @@ diets = Herbivore
 habitats = Forest
 egg_groups = Field,Fairy
 family = Pichu,Pikachu,Raichu
+capabilities = Overland:6,Swim:3,High Jump:2,Long Jump:2,Power:4,Zapper,Naturewalk:Forest,Naturewalk:Urban
 [Oddish]
 legendary = False
 base_hp = 5
@@ -387,6 +410,7 @@ diets = Phototroph
 habitats = Forest,Grassland,Marsh,Rainforest
 egg_groups = Plant
 family = Oddish,Gloom,Vileplume,Bellossom
+capabilities = Overland:4,Swim:2,Burrow:1,High Jump:1,Long Jump:1,Power:1,Naturewalk:Grassland,Naturewalk:Forest,Underdog
 [Gloom]
 legendary = False
 base_hp = 6
@@ -405,6 +429,7 @@ diets = Phototroph
 habitats = Forest,Grassland,Marsh,Rainforest
 egg_groups = Plant
 family = Oddish,Gloom,Vileplume,Bellossom
+capabilities = Overland:5,Swim:2,High Jump:1,Long Jump:1,Power:2,Naturewalk:Grassland,Naturewalk:Forest,Underdog
 [Vileplume]
 legendary = False
 base_hp = 8
@@ -422,6 +447,7 @@ diets = Phototroph
 habitats = Forest,Grassland,Marsh,Rainforest
 egg_groups = Plant
 family = Oddish,Gloom,Vileplume,Bellossom
+capabilities = Overland:5,Swim:3,High Jump:1,Long Jump:1,Power:2,Naturewalk:Grassland,Naturewalk:Forest
 [Bellossom]
 legendary = False
 base_hp = 8
@@ -439,6 +465,7 @@ diets = Phototroph
 habitats = Marsh,Rainforest
 egg_groups = Plant
 family = Oddish,Gloom,Vileplume,Bellossom
+capabilities = Overland:5,Swim:3,High Jump:1,Long Jump:1,Power:2,Alluring,Naturewalk:Grassland,Naturewalk:Forest
 [Eevee]
 legendary = False
 base_hp = 6
@@ -451,12 +478,13 @@ types = Normal
 basic_abilities = Run Away,Sprint
 advanced_abilities = Last Chance,Anticipation
 high_ability = Celebrate
-evolutions = Vaporeon,1,Water Stone;Jolteon,1,Thunderstone;Flareon,1,Fire Stone;Espeon,1,Dawn Stone;Umbreon,1,Dusk Stone;Leafeon,1,Leaf Stone;Glaceon,1,Shiny Stone
+evolutions = Vaporeon,1,Water Stone;Jolteon,1,Thunderstone;Flareon,1,Fire Stone;Espeon,1,Dawn Stone;Umbreon,1,Dusk Stone;Leafeon,1,Leaf Stone;Glaceon,1,Shiny Stone;Sylveon,1,Moon Stone
 minimum_level = 1
 diets = Herbivore
 habitats = Forest,Grassland,Urban
 egg_groups = Field
-family = Eevee,Vaporeon,Jolteon,Flareon,Espeon,Umbreon,Leafeon,Glaceon
+family = Eevee,Vaporeon,Jolteon,Flareon,Espeon,Umbreon,Leafeon,Glaceon,Sylveon
+capabilities = Overland:4,High Jump:1,Long Jump:1,Power:2,Tracker,Underdog
 [Vaporeon]
 legendary = False
 base_hp = 13
@@ -473,7 +501,8 @@ minimum_level = 1
 diets = Omnivore
 habitats = Forest,Freshwater
 egg_groups = Field
-family = Eevee,Vaporeon,Jolteon,Flareon,Espeon,Umbreon,Leafeon,Glaceon
+family = Eevee,Vaporeon,Jolteon,Flareon,Espeon,Umbreon,Leafeon,Glaceon,Sylveon
+capabilities = Overland:5,Swim:8,High Jump:1,Long Jump:2,Power:3,Amorphous,Gilled,Fountain,Tracker
 [Jolteon]
 legendary = False
 base_hp = 7
@@ -490,7 +519,8 @@ minimum_level = 1
 diets = Omnivore
 habitats = Forest,Urban
 egg_groups = Field
-family = Eevee,Vaporeon,Jolteon,Flareon,Espeon,Umbreon,Leafeon,Glaceon
+family = Eevee,Vaporeon,Jolteon,Flareon,Espeon,Umbreon,Leafeon,Glaceon,Sylveon
+capabilities = Overland:10,Swim:5,High Jump:2,Long Jump:3,Power:3,Tracker,Zapper
 [Flareon]
 legendary = False
 base_hp = 7
@@ -507,7 +537,8 @@ minimum_level = 1
 diets = Omnivore
 habitats = Cave,Mountain,Urban
 egg_groups = Field
-family = Eevee,Vaporeon,Jolteon,Flareon,Espeon,Umbreon,Leafeon,Glaceon
+family = Eevee,Vaporeon,Jolteon,Flareon,Espeon,Umbreon,Leafeon,Glaceon,Sylveon
+capabilities = Overland:7,Swim:3,High Jump:1,Long Jump:2,Power:3,Egg Warmer,Firestarter,Tracker
 [Espeon]
 legendary = False
 base_hp = 7
@@ -524,7 +555,8 @@ minimum_level = 1
 diets = Omnivore
 habitats = Forest,Grassland,Urban
 egg_groups = Field
-family = Eevee,Vaporeon,Jolteon,Flareon,Espeon,Umbreon,Leafeon,Glaceon
+family = Eevee,Vaporeon,Jolteon,Flareon,Espeon,Umbreon,Leafeon,Glaceon,Sylveon
+capabilities = Overland:6,Swim:4,High Jump:1,Long Jump:2,Power:3,Telepath,Telekinetic,Tracker,Premonition
 [Umbreon]
 legendary = False
 base_hp = 10
@@ -541,7 +573,8 @@ minimum_level = 1
 diets = Omnivore
 habitats = Cave,Forest,Urban
 egg_groups = Field
-family = Eevee,Vaporeon,Jolteon,Flareon,Espeon,Umbreon,Leafeon,Glaceon
+family = Eevee,Vaporeon,Jolteon,Flareon,Espeon,Umbreon,Leafeon,Glaceon,Sylveon
+capabilities = Overland:6,Swim:4,High Jump:1,Long Jump:2,Power:3,Darkvision,Tracker,Stealth
 [Leafeon]
 legendary = False
 base_hp = 7
@@ -558,7 +591,8 @@ minimum_level = 1
 diets = Herbivore,Phototroph
 habitats = Forest,Grassland,Rainforest
 egg_groups = Field
-family = Eevee,Vaporeon,Jolteon,Flareon,Espeon,Umbreon,Leafeon,Glaceon
+family = Eevee,Vaporeon,Jolteon,Flareon,Espeon,Umbreon,Leafeon,Glaceon,Sylveon
+capabilities = Overland:7,Swim:4,High Jump:1,Long Jump:2,Power:3,Naturewalk:Grassland,Naturewalk:Forest,Tracker
 [Glaceon]
 legendary = False
 base_hp = 7
@@ -575,7 +609,26 @@ minimum_level = 1
 diets = Omnivore
 habitats = Taiga,Tundra
 egg_groups = Field
-family = Eevee,Vaporeon,Jolteon,Flareon,Espeon,Umbreon,Leafeon,Glaceon
+family = Eevee,Vaporeon,Jolteon,Flareon,Espeon,Umbreon,Leafeon,Glaceon,Sylveon
+capabilities = Overland:6,Swim:4,High Jump:1,Long Jump:2,Power:3,Freezer,Naturewalk:Tundra,Tracker
+[Sylveon]
+legendary = False
+base_hp = 10
+base_attack = 7
+base_defense = 7
+base_special_attack = 11
+base_special_defense = 13
+base_speed = 6
+types = Fairy
+basic_abilities = Cute Charm,Gentle Vibe
+advanced_abilities = Type Aura (Fairy),Pixilate
+high_ability = Friend Guard
+minimum_level = 1
+diets = Herbivore
+habitats = Grassland,Urban
+egg_groups = Field
+family = Eevee,Vaporeon,Jolteon,Flareon,Espeon,Umbreon,Leafeon,Glaceon,Sylveon
+capabilities = Overland:6,Swim:4,High Jump:1,Long Jump:2,Power:3,Tracker
 ; [DEFAULT]
 ; legendary = False
 ; base_hp = 
@@ -597,3 +650,4 @@ family = Eevee,Vaporeon,Jolteon,Flareon,Espeon,Umbreon,Leafeon,Glaceon
 ; habitats = 
 ; egg_groups = 
 ; family = 
+; capabilities = 
