Added page reference for pokemon. Moved Pichu/Pikachu/Raichu.

--- a/pokemon.ini
+++ b/pokemon.ini
@@ -1,6 +1,7 @@
 ; Pokedex isn't consistent on spelling of Naturewalk terrains, both within the Capabilities section and compared to the Habitat section
 ; Naturewalk:Grassland
 [Bulbasaur]
+page = 12
 legendary = False
 base_hp = 5
 base_attack = 5
@@ -20,6 +21,7 @@ egg_groups = Monster,Plant
 family = Bulbasaur,Ivysaur,Venusaur
 capabilities = Overland:5,Swim:3,High Jump:0,Long Jump:2,Power:2,Naturewalk:Grassland,Naturewalk:Forest,Underdog
 [Ivysaur]
+page = 13
 legendary = False
 base_hp = 6
 base_attack = 6
@@ -39,6 +41,7 @@ egg_groups = Monster,Plant
 family = Bulbasaur,Ivysaur,Venusaur
 capabilities = Overland:6,Swim:3,High Jump:1,Long Jump:1,Power:3,Naturewalk:Grassland,Naturewalk:Forest,Underdog
 [Venusaur]
+page = 14
 legendary = False
 base_hp = 8
 base_attack = 8
@@ -57,6 +60,7 @@ egg_groups = Monster,Plant
 family = Bulbasaur,Ivysaur,Venusaur
 capabilities = Overland:6,Swim:4,High Jump:2,Long Jump:2,Power:8,Naturewalk:Grassland,Naturewalk:Forest,Alluring
 [Chikorita]
+page = 15
 legendary = False
 base_hp = 5
 base_attack = 5
@@ -76,6 +80,7 @@ egg_groups = Monster,Plant
 family = Chikorita,Bayleef,Meganium
 capabilities = Overland:5,Swim:3,High Jump:1,Long Jump:1,Power:2,Naturewalk:Grassland,Naturewalk:Forest,Underdog
 [Bayleef]
+page = 16
 legendary = False
 base_hp = 6
 base_attack = 6
@@ -95,6 +100,7 @@ egg_groups = Monster,Plant
 family = Chikorita,Bayleef,Meganium
 capabilities = Overland:7,Swim:4,High Jump:2,Long Jump:2,Power:3,Naturewalk:Grassland,Naturewalk:Forest,Underdog
 [Meganium]
+page = 17
 legendary = False
 base_hp = 8
 base_attack = 8
@@ -113,6 +119,7 @@ egg_groups = Monster,Plant
 family = Chikorita,Bayleef,Meganium
 capabilities = Overland:8,Swim:4,High Jump:2,Long Jump:2,Power:4,Naturewalk:Grassland,Naturewalk:Forest
 [Charmander]
+page = 30
 legendary = False
 base_hp = 4
 base_attack = 5
@@ -132,6 +139,7 @@ egg_groups = Monster,Dragon
 family = Charmander,Charmeleon,Charizard
 capabilities = Overland:5,Swim:3,High Jump:1,Long Jump:1,Power:2,Firestarter,Glow,Naturewalk:Mountain,Underdog
 [Charmeleon]
+page = 31
 legendary = False
 base_hp = 6
 base_attack = 6
@@ -151,6 +159,7 @@ egg_groups = Monster,Dragon
 family = Charmander,Charmeleon,Charizard
 capabilities = Overland:6,Swim:4,High Jump:1,Long Jump:1,Power:4,Firestarter,Glow,Naturewalk:Mountain,Underdog
 [Charizard]
+page = 32
 legendary = False
 base_hp = 8
 base_attack = 8
@@ -169,6 +178,7 @@ egg_groups = Monster,Dragon
 family = Charmander,Charmeleon,Charizard
 capabilities = Overland:6,Swim:5,Sky:8,High Jump:2,Long Jump:3,Power:8,Firestarter,Glow,Heater,Naturewalk:Mountain,Mountable:1
 [Cyndaquil]
+page = 33
 legendary = False
 base_hp = 4
 base_attack = 5
@@ -188,6 +198,7 @@ egg_groups = Field
 family = Cyndaquil,Quilava,Typhlosion
 capabilities = Overland:5,Swim:3,High Jump:1,Long Jump:1,Burrow:2,Power:2,Firestarter,Heater,Glow,Naturewalk:Grassland,Underdog
 [Quilava]
+page = 34
 legendary = False
 base_hp = 6
 base_attack = 6
@@ -207,6 +218,7 @@ egg_groups = Field
 family = Cyndaquil,Quilava,Typhlosion
 capabilities = Overland:7,Swim:4,High Jump:2,Long Jump:2,Burrow:3,Power:3,Firestarter,Heater,Glow,Naturewalk:Grassland,Underdog
 [Typhlosion]
+page = 35
 legendary = False
 base_hp = 8
 base_attack = 8
@@ -225,6 +237,7 @@ egg_groups = Field
 family = Cyndaquil,Quilava,Typhlosion
 capabilities = Overland:9,Swim:5,High Jump:2,Long Jump:2,Power:6,Firestarter,Heater,Glow,Naturewalk:Grassland
 [Squirtle]
+page = 48
 legendary = False
 base_hp = 4
 base_attack = 5
@@ -244,6 +257,7 @@ egg_groups = Monster,Water 1
 family = Squirtle,Wartortle,Blastoise
 capabilities = Overland:6,Swim:6,High Jump:1,Long Jump:1,Power:2,Fountain,Naturewalk:Wetland,Underdog
 [Wartortle]
+page = 49
 legendary = False
 base_hp = 6
 base_attack = 6
@@ -263,6 +277,7 @@ egg_groups = Monster,Water 1
 family = Squirtle,Wartortle,Blastoise
 capabilities = Overland:6,Swim:6,High Jump:1,Long Jump:1,Power:4,Fountain,Naturewalk:Wetlands,Underdog
 [Blastoise]
+page = 50
 legendary = False
 base_hp = 8
 base_attack = 8
@@ -281,6 +296,7 @@ egg_groups = Monster,Water 1
 family = Squirtle,Wartortle,Blastoise
 capabilities = Overland:6,Swim:9,High Jump:1,Long Jump:1,Power:9,Fountain,Naturewalk:Grassland,Mountable:1
 [Tododile]
+page = 51
 legendary = False
 base_hp = 5
 base_attack = 7
@@ -300,6 +316,7 @@ egg_groups = Monster,Water 1
 family = Tododile,Croconaw,Feraligatr
 capabilities = Overland:6,Swim:6,High Jump:1,Long Jump:2,Power:2,Fountain,Naturewalk:Wetlands,Underdog
 [Croconaw]
+page = 52
 legendary = False
 base_hp = 7
 base_attack = 8
@@ -319,6 +336,7 @@ egg_groups = Monster,Water 1
 family = Tododile,Croconaw,Feraligatr
 capabilities = Overland:7,Swim:7,High Jump:1,Long Jump:2,Power:5,Fountain,Naturewalk:Wetlands,Underdog
 [Feraligatr]
+page = 53
 legendary = False
 base_hp = 9
 base_attack = 11
@@ -336,63 +354,8 @@ habitats = Beach,Freshwater,Marsh
 egg_groups = Monster,Water 1
 family = Tododile,Croconaw,Feraligatr
 capabilities = Overland:7,Swim:8,High Jump:2,Long Jump:2,Power:8,Fountain,Naturewalk:Wetlands
-[Pichu]
-legendary = False
-base_hp = 2
-base_attack = 4
-base_defense = 2
-base_special_attack = 4
-base_special_defense = 4
-base_speed = 6
-types = Electric
-basic_abilities = Static,Cute Charm
-advanced_abilities = Lightning Rod,Sprint
-high_ability = Sequence
-evolutions = Pikachu,10
-minimum_level = 1
-diets = Herbivore
-habitats = Forest,Grassland,Urban
-egg_groups = Field,Fairy
-family = Pichu,Pikachu,Raichu
-capabilities = Overland:3,Swim:1,High Jump:1,Long Jump:2,Power:1,Zapper,Naturewalk:Forest,Naturewalk:Urban,Underdog
-[Pikachu]
-legendary = False
-base_hp = 4
-base_attack = 6
-base_defense = 4
-base_special_attack = 5
-base_special_defense = 5
-base_speed = 9
-types = Electric
-basic_abilities = Static,Cute Charm
-advanced_abilities = Lightning Rod,Sprint
-high_ability = Sequence
-evolutions = Raichu,20,Thunder Stone
-minimum_level = 1
-diets = Herbivore
-habitats = Forest,Grassland,Urban
-egg_groups = Field,Fairy
-family = Pichu,Pikachu,Raichu
-capabilities = Overland:7,Swim:2,High Jump:2,Long Jump:2,Power:2,Zapper,Naturewalk:Forest,Naturewalk:Urban,Underdog
-[Raichu]
-legendary = False
-base_hp = 6
-base_attack = 9
-base_defense = 6
-base_special_attack = 9
-base_special_defense = 8
-base_speed = 11
-types = Electric
-basic_abilities = Static,Motor Drive
-advanced_abilities = Lightning Rod,Sprint
-high_ability = Sequence
-minimum_level = 20
-diets = Herbivore
-habitats = Forest
-egg_groups = Field,Fairy
-family = Pichu,Pikachu,Raichu
-capabilities = Overland:6,Swim:3,High Jump:2,Long Jump:2,Power:4,Zapper,Naturewalk:Forest,Naturewalk:Urban
 [Oddish]
+page = 125
 legendary = False
 base_hp = 5
 base_attack = 5
@@ -412,6 +375,7 @@ egg_groups = Plant
 family = Oddish,Gloom,Vileplume,Bellossom
 capabilities = Overland:4,Swim:2,Burrow:1,High Jump:1,Long Jump:1,Power:1,Naturewalk:Grassland,Naturewalk:Forest,Underdog
 [Gloom]
+page = 126
 legendary = False
 base_hp = 6
 base_attack = 7
@@ -431,6 +395,7 @@ egg_groups = Plant
 family = Oddish,Gloom,Vileplume,Bellossom
 capabilities = Overland:5,Swim:2,High Jump:1,Long Jump:1,Power:2,Naturewalk:Grassland,Naturewalk:Forest,Underdog
 [Vileplume]
+page = 127
 legendary = False
 base_hp = 8
 base_attack = 8
@@ -449,6 +414,7 @@ egg_groups = Plant
 family = Oddish,Gloom,Vileplume,Bellossom
 capabilities = Overland:5,Swim:3,High Jump:1,Long Jump:1,Power:2,Naturewalk:Grassland,Naturewalk:Forest
 [Bellossom]
+page = 128
 legendary = False
 base_hp = 8
 base_attack = 8
@@ -466,7 +432,67 @@ habitats = Marsh,Rainforest
 egg_groups = Plant
 family = Oddish,Gloom,Vileplume,Bellossom
 capabilities = Overland:5,Swim:3,High Jump:1,Long Jump:1,Power:2,Alluring,Naturewalk:Grassland,Naturewalk:Forest
+[Pichu]
+page = 144
+legendary = False
+base_hp = 2
+base_attack = 4
+base_defense = 2
+base_special_attack = 4
+base_special_defense = 4
+base_speed = 6
+types = Electric
+basic_abilities = Static,Cute Charm
+advanced_abilities = Lightning Rod,Sprint
+high_ability = Sequence
+evolutions = Pikachu,10
+minimum_level = 1
+diets = Herbivore
+habitats = Forest,Grassland,Urban
+egg_groups = Field,Fairy
+family = Pichu,Pikachu,Raichu
+capabilities = Overland:3,Swim:1,High Jump:1,Long Jump:2,Power:1,Zapper,Naturewalk:Forest,Naturewalk:Urban,Underdog
+[Pikachu]
+page = 145
+legendary = False
+base_hp = 4
+base_attack = 6
+base_defense = 4
+base_special_attack = 5
+base_special_defense = 5
+base_speed = 9
+types = Electric
+basic_abilities = Static,Cute Charm
+advanced_abilities = Lightning Rod,Sprint
+high_ability = Sequence
+evolutions = Raichu,20,Thunder Stone
+minimum_level = 1
+diets = Herbivore
+habitats = Forest,Grassland,Urban
+egg_groups = Field,Fairy
+family = Pichu,Pikachu,Raichu
+capabilities = Overland:7,Swim:2,High Jump:2,Long Jump:2,Power:2,Zapper,Naturewalk:Forest,Naturewalk:Urban,Underdog
+[Raichu]
+page = 146
+legendary = False
+base_hp = 6
+base_attack = 9
+base_defense = 6
+base_special_attack = 9
+base_special_defense = 8
+base_speed = 11
+types = Electric
+basic_abilities = Static,Motor Drive
+advanced_abilities = Lightning Rod,Sprint
+high_ability = Sequence
+minimum_level = 20
+diets = Herbivore
+habitats = Forest
+egg_groups = Field,Fairy
+family = Pichu,Pikachu,Raichu
+capabilities = Overland:6,Swim:3,High Jump:2,Long Jump:2,Power:4,Zapper,Naturewalk:Forest,Naturewalk:Urban
 [Eevee]
+page = 631
 legendary = False
 base_hp = 6
 base_attack = 6
@@ -486,6 +512,7 @@ egg_groups = Field
 family = Eevee,Vaporeon,Jolteon,Flareon,Espeon,Umbreon,Leafeon,Glaceon,Sylveon
 capabilities = Overland:4,High Jump:1,Long Jump:1,Power:2,Tracker,Underdog
 [Vaporeon]
+page = 632
 legendary = False
 base_hp = 13
 base_attack = 7
@@ -504,6 +531,7 @@ egg_groups = Field
 family = Eevee,Vaporeon,Jolteon,Flareon,Espeon,Umbreon,Leafeon,Glaceon,Sylveon
 capabilities = Overland:5,Swim:8,High Jump:1,Long Jump:2,Power:3,Amorphous,Gilled,Fountain,Tracker
 [Jolteon]
+page = 633
 legendary = False
 base_hp = 7
 base_attack = 7
@@ -522,6 +550,7 @@ egg_groups = Field
 family = Eevee,Vaporeon,Jolteon,Flareon,Espeon,Umbreon,Leafeon,Glaceon,Sylveon
 capabilities = Overland:10,Swim:5,High Jump:2,Long Jump:3,Power:3,Tracker,Zapper
 [Flareon]
+page = 634
 legendary = False
 base_hp = 7
 base_attack = 13
@@ -540,6 +569,7 @@ egg_groups = Field
 family = Eevee,Vaporeon,Jolteon,Flareon,Espeon,Umbreon,Leafeon,Glaceon,Sylveon
 capabilities = Overland:7,Swim:3,High Jump:1,Long Jump:2,Power:3,Egg Warmer,Firestarter,Tracker
 [Espeon]
+page = 635
 legendary = False
 base_hp = 7
 base_attack = 7
@@ -558,6 +588,7 @@ egg_groups = Field
 family = Eevee,Vaporeon,Jolteon,Flareon,Espeon,Umbreon,Leafeon,Glaceon,Sylveon
 capabilities = Overland:6,Swim:4,High Jump:1,Long Jump:2,Power:3,Telepath,Telekinetic,Tracker,Premonition
 [Umbreon]
+page = 636
 legendary = False
 base_hp = 10
 base_attack = 7
@@ -576,6 +607,7 @@ egg_groups = Field
 family = Eevee,Vaporeon,Jolteon,Flareon,Espeon,Umbreon,Leafeon,Glaceon,Sylveon
 capabilities = Overland:6,Swim:4,High Jump:1,Long Jump:2,Power:3,Darkvision,Tracker,Stealth
 [Leafeon]
+page = 637
 legendary = False
 base_hp = 7
 base_attack = 11
@@ -594,6 +626,7 @@ egg_groups = Field
 family = Eevee,Vaporeon,Jolteon,Flareon,Espeon,Umbreon,Leafeon,Glaceon,Sylveon
 capabilities = Overland:7,Swim:4,High Jump:1,Long Jump:2,Power:3,Naturewalk:Grassland,Naturewalk:Forest,Tracker
 [Glaceon]
+page = 638
 legendary = False
 base_hp = 7
 base_attack = 6
@@ -612,6 +645,7 @@ egg_groups = Field
 family = Eevee,Vaporeon,Jolteon,Flareon,Espeon,Umbreon,Leafeon,Glaceon,Sylveon
 capabilities = Overland:6,Swim:4,High Jump:1,Long Jump:2,Power:3,Freezer,Naturewalk:Tundra,Tracker
 [Sylveon]
+page = 639
 legendary = False
 base_hp = 10
 base_attack = 7
@@ -630,6 +664,7 @@ egg_groups = Field
 family = Eevee,Vaporeon,Jolteon,Flareon,Espeon,Umbreon,Leafeon,Glaceon,Sylveon
 capabilities = Overland:6,Swim:4,High Jump:1,Long Jump:2,Power:3,Tracker
 ; [DEFAULT]
+; page = 
 ; legendary = False
 ; base_hp = 
 ; base_attack = 
